--- a/HostelManagementSystem/Properties/Resources.resx
+++ b/HostelManagementSystem/Properties/Resources.resx
@@ -118,20 +118,8 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="abstract-orange-background-layout-design-studio-room-web-template-business-report-with-smooth-circle-gradient-color" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\abstract-orange-background-layout-design-studio-room-web-template-business-report-with-smooth-circle-gradient-color.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="sincerely-media-1v3sFY_gkA0-unsplash1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\sincerely-media-1v3sFY_gkA0-unsplash1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="3747425" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\3747425.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="jack-michaud-kF0zCdZY2TA-unsplash" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\jack-michaud-kF0zCdZY2TA-unsplash.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="4882066" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\4882066.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="key-icon-26605" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\key-icon-26605.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="sincerely-media-1v3sFY_gkA0-unsplash" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\sincerely-media-1v3sFY_gkA0-unsplash.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -139,7 +127,40 @@
   <data name="Christmas Design Wallpapers" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Christmas Design Wallpapers.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="jack-michaud-kF0zCdZY2TA-unsplash" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\jack-michaud-kF0zCdZY2TA-unsplash.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="kisspng-login-google-account-computer-icons-user-activity-5ac6bbe6ad7041.1621164815229736707104" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\kisspng-login-google-account-computer-icons-user-activity-5ac6bbe6ad7041.1621164815229736707104.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="key-4-48" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\key-4-48.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="kisspng-black-and-white-download-clip-art-key-water-cliparts-5ab3b5ab637a93.8781894615217268914075" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\kisspng-black-and-white-download-clip-art-key-water-cliparts-5ab3b5ab637a93.8781894615217268914075.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="pastel-purple-color-solid-background-1920x1080" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\pastel-purple-color-solid-background-1920x1080.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="key-4-16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\key-4-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="3747425" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\3747425.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icons8-user-50" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icons8-user-50.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="sincerely-media-1v3sFY_gkA0-unsplash1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\sincerely-media-1v3sFY_gkA0-unsplash1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="4882066" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\4882066.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="abstract-orange-background-layout-design-studio-room-web-template-business-report-with-smooth-circle-gradient-color" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\abstract-orange-background-layout-design-studio-room-web-template-business-report-with-smooth-circle-gradient-color.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="download" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\download.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
